--- a/index.html
+++ b/index.html
@@ -3,23 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
+    <title>My Video Showcase Website</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #4a90e2;
+            color: white;
+            padding: 20px;
             text-align: center;
-            margin-top: 100px;
         }
-        h1 {
-            color: #3498db;
+
+        .container {
+            max-width: 1000px;
+            margin: auto;
+            padding: 20px;
         }
-        p {
-            font-size: 18px;
+
+        .intro {
+            text-align: center;
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            margin-bottom: 30px;
+        }
+
+        .videos {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            gap: 20px;
+        }
+
+        .video-wrapper {
+            flex: 1 1 45%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            background-color: #ffffff;
+        }
+
+        iframe {
+            width: 100%;
+            height: 315px;
+            border: none;
+        }
+
+        footer {
+            background-color: #4a90e2;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple webpage made with HTML and CSS.</p>
+    <header>
+        <h1>Welcome to My Video Showcase</h1>
+    </header>
+
+    <div class="container">
+        <!-- Introduction Section -->
+        <div class="intro">
+            <h2>Introduction</h2>
+            <p>Welcome to my website! Here, you will find an introduction to some amazing content. Below, I've embedded a couple of videos from YouTube that I hope you'll enjoy.</p>
+        </div>
+
+        <!-- Video Section -->
+        <div class="videos">
+            <div class="video-wrapper">
+                <!-- YouTube Video 1 -->
+                <iframe src="https://www.youtube.com/embed/SUo2fHZaZCU" allowfullscreen></iframe>
+            </div>
+
+            <div class="video-wrapper">
+                <!-- YouTube Video 2 -->
+                <iframe src="https://www.youtube.com/embed/0degAES_iKU" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 My Video Showcase Website</p>
+    </footer>
 </body>
 </html>
+
