--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Video Showcase Website</title>
+    <title>Maklumat Tambahan tentang Mikroskop</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -67,14 +67,14 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Video Showcase</h1>
+        <h1>This is a website for Microscope</h1>
     </header>
 
     <div class="container">
         <!-- Introduction Section -->
         <div class="intro">
-            <h2>Introduction</h2>
-            <p>Welcome to my website! Here, you will find an introduction to some amazing content. Below, I've embedded a couple of videos from YouTube that I hope you'll enjoy.</p>
+            <h2>Pengenalan Mikroskop</h2>
+            <p>Mikroskop ialah alat yang membolehkan kita meneroka butiran tersembunyi di sekeliling kita. Ia membolehkan kita melihat objek yang terlalu kecil untuk diperhatikan dengan mata kasar, seperti sel, bakteria, dan juga struktur tumbuhan serta mineral yang kompleks. Sejak dicipta, mikroskop telah menjadi alat penting dalam pelbagai bidang sains, seperti biologi, perubatan, dan sains bahan. Dengan membesarkan imej objek, mikroskop memberikan saintis dan penyelidik pemahaman yang lebih mendalam tentang komponen asas yang membentuk semua benda hidup dan bukan hidup, sekali gus membuka jalan kepada penemuan penting dalam bidang kesihatan, kajian alam sekitar, dan banyak lagi.</p>
         </div>
 
         <!-- Video Section -->
@@ -92,7 +92,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 My Video Showcase Website</p>
+        <p>&copy; 2024 Microscope Introduction Website</p>
     </footer>
 </body>
 </html>
