--- a/index.html
+++ b/index.html
@@ -101,6 +101,37 @@
             margin-top: 40px;
         }
 
+        .faq {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 40px;
+        }
+
+        .faq h3 {
+            cursor: pointer;
+            margin: 10px 0;
+            padding: 10px;
+            background-color: #3498db;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .faq h3:hover {
+            background-color: #2980b9;
+        }
+
+        .faq-content {
+            display: none;
+            margin-top: 10px;
+            padding: 10px;
+            border-left: 4px solid #3498db;
+            background-color: #ecf0f1;
+            border-radius: 5px;
+        }
+
         @media (max-width: 768px) {
             .video-wrapper {
                 flex: 1 1 100%;
@@ -116,6 +147,7 @@
     <nav>
         <a href="#intro">Pengenalan</a>
         <a href="#videos">Video</a>
+        <a href="#faq">Q&A</a>
         <a href="#contact">Hubungi Kami</a>
     </nav>
 
@@ -130,7 +162,7 @@
         <div class="videos" id="videos">
             <div class="video-wrapper">
                 <!-- YouTube Video 1 -->
-                <iframe src="https://www.youtube.com/embed/tVcEEw6qbBQ" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/SUo2fHZaZCU" allowfullscreen></iframe>
             </div>
 
             <div class="video-wrapper">
@@ -138,10 +170,40 @@
                 <iframe src="https://www.youtube.com/embed/0degAES_iKU" allowfullscreen></iframe>
             </div>
         </div>
+
+        <!-- Q&A Section -->
+        <div class="faq" id="faq">
+            <h2>Soalan & Jawapan (Q&A)</h2>
+            <h3 onclick="toggleFAQ(1)">Soalan 1: Apakah fungsi utama mikroskop?</h3>
+            <div class="faq-content" id="faq1">
+                <p>Fungsi utama mikroskop adalah untuk memperbesar objek kecil agar dapat dilihat dengan jelas, membantu dalam pengamatan struktur dan butiran yang tidak dapat dilihat dengan mata kasar.</p>
+            </div>
+
+            <h3 onclick="toggleFAQ(2)">Soalan 2: Bagaimana cara mengendalikan mikroskop dengan betul?</h3>
+            <div class="faq-content" id="faq2">
+                <p>Untuk mengendalikan mikroskop dengan betul, pastikan ia diletakkan di permukaan rata, pilih lensa objektif yang sesuai, letakkan sampel dengan stabil, gunakan pengawal fokus kasar untuk mendapatkan fokus kasar, kemudian gunakan pengawal fokus halus untuk penyesuaian akhir. Sesuaikan pencahayaan untuk meningkatkan kualiti gambar.</p>
+            </div>
+
+            <h3 onclick="toggleFAQ(3)">Soalan 3: Apakah perbezaan antara mikroskop dan teleskop?</h3>
+            <div class="faq-content" id="faq3">
+                <p>Mikroskop digunakan untuk melihat objek kecil, sementara teleskop digunakan untuk melihat objek yang jauh. Mikroskop mempunyai magnifikasi yang lebih tinggi, manakala teleskop lebih fokus pada pembesaran objek yang jauh dan menangkap cahaya dari bintang atau planet.</p>
+            </div>
+        </div>
     </div>
 
     <footer id="contact">
         <p>&copy; 2024 Microscope Introduction Website | Hubungi kami di <a href="mailto:info@mikroskop.com" style="color: #f39c12; text-decoration: none;">info@mikroskop.com</a></p>
     </footer>
+
+    <script>
+        function toggleFAQ(index) {
+            const content = document.getElementById(`faq${index}`);
+            if (content.style.display === "block") {
+                content.style.display = "none";
+            } else {
+                content.style.display = "block";
+            }
+        }
+    </script>
 </body>
 </html>
