--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         }
 
         header {
-            background-color: #2c3e50;
+            background: linear-gradient(135deg, #2c3e50, #4ca1af);
             color: white;
             padding: 20px;
             text-align: center;
             position: sticky;
             top: 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             z-index: 1000;
         }
 
@@ -37,11 +37,12 @@
             color: #ecf0f1;
             text-decoration: none;
             font-weight: 500;
-            transition: color 0.3s ease;
+            transition: color 0.3s ease, transform 0.3s ease;
         }
 
         nav a:hover {
             color: #f39c12;
+            transform: scale(1.05);
         }
 
         .container {
@@ -54,14 +55,14 @@
             text-align: center;
             background-color: #ffffff;
             padding: 30px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             border-radius: 15px;
             margin-bottom: 40px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .intro:hover {
-            transform: translateY(-10px);
+            transform: translateY(-5px);
             box-shadow: 0 16px 32px rgba(0, 0, 0, 0.2);
         }
 
@@ -75,15 +76,15 @@
         .video-wrapper {
             flex: 1 1 calc(50% - 40px);
             max-width: 500px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 15px;
             overflow: hidden;
             background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .video-wrapper:hover {
-            transform: translateY(-10px);
+            transform: translateY(-5px);
             box-shadow: 0 16px 32px rgba(0, 0, 0, 0.2);
         }
 
@@ -116,11 +117,12 @@
             background-color: #3498db;
             color: white;
             border-radius: 5px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         .faq h3:hover {
             background-color: #2980b9;
+            transform: scale(1.02);
         }
 
         .faq-content {
@@ -130,6 +132,15 @@
             border-left: 4px solid #3498db;
             background-color: #ecf0f1;
             border-radius: 5px;
+            transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
+            overflow: hidden;
+            opacity: 0;
+            max-height: 0;
+        }
+
+        .faq-content.show {
+            opacity: 1;
+            max-height: 200px; /* Adjust as necessary */
         }
 
         @media (max-width: 768px) {
@@ -198,11 +209,7 @@
     <script>
         function toggleFAQ(index) {
             const content = document.getElementById(`faq${index}`);
-            if (content.style.display === "block") {
-                content.style.display = "none";
-            } else {
-                content.style.display = "block";
-            }
+            content.classList.toggle("show");
         }
     </script>
 </body>
