--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         }
 
         .faq {
-            background-color: #ffffff;
+            background-color: #f8f9fa;
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -129,14 +129,14 @@
             cursor: pointer;
             margin: 0;
             padding: 15px;
-            background-color: #3498db;
+            background-color: #7f8c8d; /* Dark Grey for question */
             color: white;
             border-radius: 10px;
             transition: background-color 0.3s, transform 0.3s;
         }
 
         .faq-item h3:hover {
-            background-color: #2980b9;
+            background-color: #2c3e50; /* Even Darker Shade on Hover */
             transform: scale(1.02);
         }
 
@@ -144,8 +144,8 @@
             display: none;
             margin: 10px;
             padding: 15px;
-            border-left: 4px solid #3498db;
-            background-color: #ecf0f1;
+            border-left: 4px solid #7f8c8d; /* Dark Grey */
+            background-color: #bdc3c7; /* Grey for answer */
             border-radius: 5px;
             transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
             overflow: hidden;
@@ -154,6 +154,7 @@
         }
 
         .faq-content.show {
+            display: block;
             opacity: 1;
             max-height: 200px; /* Adjust as necessary */
         }
@@ -236,3 +237,4 @@
     </script>
 </body>
 </html>
+
